[Mac] Media Session: add support for more telephony interruptions https://bugs.webkit.org/show_bug.cgi?id=147079

Reviewed by Eric Carlson.

* platform/mediasession/mac/MediaSessionInterruptionProviderMac.mm:
(WebCore::callDidEndRinging): End 'Transient' interruptions.
(WebCore::callDidConnect): Forward this event to media sessions as a 'Content' interruption.
(WebCore::MediaSessionInterruptionProviderMac::beginListeningForInterruptions): Register observers for new
 notification types.
(WebCore::MediaSessionInterruptionProviderMac::stopListeningForInterruptions): Unregister all observers.

Canonical link: https://commits.webkit.org/165549@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@187613 268f45cc-cd09-0410-ab3c-d52691b4dbfc